--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="css/styles.css" type="text/css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Kokoa Clone</title>
@@ -16,7 +17,7 @@
       </div>
       <div class="status-bar__column">
         <span>100%</span>
-        <i class="fa-solid fa-battery-full"></i>
+        <i class="fa-solid fa-battery-full fa-lg"></i>
         <i class="fa-solid fa-bolt-lightning"></i>
       </div>
     </div>
