--- a/friends.html
+++ b/friends.html
@@ -22,6 +22,15 @@
       </div>
     </div>
 
+    <header class="screen-header">
+      <h1 class="screen-header__title">Friends</h1>
+      <div class="screen-header__icons">
+        <span><i class="fa-solid fa-magnifying-glass fa-xl"></i></span>
+        <span><i class="fa-solid fa-music fa-xl"></i></span>
+        <span><i class="fa-solid fa-cog fa-xl"></i></span>
+      </div>
+    </header>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
