Add `More dot` component

--- a/friends.html
+++ b/friends.html
@@ -99,7 +99,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="#">
-            <p class="nav__ellipsis-more"></p>
+            <p class="more-dot nav__ellipsis-more-dot"></p>
             <i class="fa-solid fa-ellipsis fa-2x"></i>
           </a>
         </li>
