--- a/chats.html
+++ b/chats.html
@@ -72,7 +72,7 @@
           </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#">
+          <a class="nav__link" href="more.html">
             <p class="more-dot nav__ellipsis-more-dot"></p>
             <i class="fa-solid fa-ellipsis fa-2x"></i>
           </a>
