--- a/find.html
+++ b/find.html
@@ -34,20 +34,20 @@
     </header>
 
     <main class="main-screen">
-      <div class="find-icons">
-        <div class="find-icons__icon">
+      <div class="icon-row">
+        <div class="icon-row__icon">
           <i class="fa-solid fa-qrcode"></i>
           <span>QR Code</span>
         </div>
-        <div class="find-icons__icon">
+        <div class="icon-row__icon">
           <i class="fa-regular fa-address-book"></i>
           <span>Add by Contacts</span>
         </div>
-        <div class="find-icons__icon">
+        <div class="icon-row__icon">
           <i class="fa-solid fa-fingerprint"></i>
           <span>Add by ID</span>
         </div>
-        <div class="find-icons__icon">
+        <div class="icon-row__icon">
           <i class="fa-regular fa-envelope"></i>
           <span>Invite</span>
         </div>
@@ -109,7 +109,7 @@
           </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#">
+          <a class="nav__link" href="more.html">
             <div class="more-dot nav__ellipsis-more-dot"></div>
             <i class="fa-solid fa-ellipsis fa-2x"></i>
           </a>
