--- a/find.html
+++ b/find.html
@@ -26,10 +26,7 @@
       <h1 class="screen-header__title">Find</h1>
       <div class="screen-header__icons">
         <span><i class="fa-solid fa-magnifying-glass fa-xl"></i></span>
-        <span>
-          <div class="more-dot"></div>
-          <i class="fa-solid fa-cog fa-xl"></i>
-        </span>
+        <span><i class="fa-solid fa-cog fa-xl"></i></span>
       </div>
     </header>
 
