--- a/more.html
+++ b/more.html
@@ -28,8 +28,10 @@
         <span><i class="fa-solid fa-magnifying-glass fa-xl"></i></span>
         <span><i class="fa-solid fa-music fa-xl"></i></span>
         <span>
-          <div class="more-dot"></div>
-          <i class="fa-solid fa-cog fa-xl"></i>
+          <a href="settings.html">
+            <div class="more-dot"></div>
+            <i class="fa-solid fa-cog fa-xl"></i>
+          </a>
         </span>
       </div>
     </header>
