--- a/chat.html
+++ b/chat.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css" type="text/css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Chat w/ Gyute - Kokoa Clone</title>
+    <title>Chat w/ Francis - Kokoa Clone</title>
   </head>
   <body id="chat-screen" class="chat-screen-bg">
     <div class="status-bar chat-screen-bg">
@@ -29,7 +29,7 @@
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="screen-header__title alt-header__title">Gyute</h1>
+        <h1 class="screen-header__title alt-header__title">Francis</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fa-solid fa-magnifying-glass fa-2x"></i></span>
