--- a/friends.html
+++ b/friends.html
@@ -106,6 +106,10 @@
       </ul>
     </nav>
 
+    <div id="splash-screen">
+      <i class="fa-solid fa-comment"></i>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/a1569b8f13.js"
       crossorigin="anonymous"
