--- a/friends.html
+++ b/friends.html
@@ -110,6 +110,10 @@
       <i class="fa-solid fa-comment"></i>
     </div>
 
+    <div id="no-mobile">
+      <span>Your screen is too big</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/a1569b8f13.js"
       crossorigin="anonymous"
